Add: code for document analysis graph

--- a/langgraph_framework/document_analysis_graph.ipynb
+++ b/langgraph_framework/document_analysis_graph.ipynb
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 72,
    "id": "9df615d6",
    "metadata": {},
    "outputs": [],
@@ -183,7 +183,7 @@
     "\n",
     "llm = ChatOllama(model=\"kimi-k2:1t-cloud\")\n",
     "\n",
-    "llm_with_tools = llm.bind_tools(tools)"
+    "llm_with_tools = llm.bind_tools(tools) # chatollama doesn't supports parameter parallel_tool_calls"
    ]
   },
   {
